# angel

./: .gitmodules  CMakeLists.txt  License.txt  Readme.md
cmake/: FindGLM.cmake
game/: content.as  main.as
scripts/: boot.as  graphics.as
src/: class_register.cpp  class_register.h  common.h  event_handlers.cpp  event_handlers.h  main.cpp  script_call.cpp  script_call.h  variant_helpers.cpp  variant_helpers.h
src/angel_common/: bindings.cpp  bindings.h  color.cpp  color.h  object.cpp  object.h  pixelformat.cpp  pixelformat.h  variant.cpp  variant.h
src/angel_common/data/: data.cpp  data.h
src/angel_common/font/: rasterizer.cpp  rasterizer.h
src/angel_common/graphics/: drawable.cpp  drawable.h  image.cpp  image.h  texture.cpp  texture.h
src/angel_common/math/: math.cpp  math.h  vec2.cpp  vec2.h
src/angel_modules/: data.cpp  data.h  event.cpp  event.h  filesystem.cpp  filesystem.h  font.cpp  font.h  graphics.cpp  graphics.h  image.cpp  image.h  physics.cpp  physics.h  timer.cpp  timer.h  window.cpp  window.h
